@@ -3,6 +3,9 @@ git-annex (5.20140818) UNRELEASED; urgency=medium
   * Make --help work when not in a git repository. Closes: #758592
   * Ensure that all lock fds are close-on-exec, fixing various problems with
     them being inherited by child processes such as git commands.
+  * When accessing a local remote, shut down git-cat-file processes
+    afterwards, to ensure that remotes on removable media can be unmounted.
+    Closes: #758630
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Aug 2014 12:52:41 -0400
 
